# hyper-prot

./: Makefile  README.md
exec/: .gitignore
experiments/: 1.ipynb  2.ipynb
server/: Makefile  README.md  pyproject.toml
server/src/: foldseek.py  server.py  utils.py
website/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
website/public/: shared
website/src/: App.svelte  app.css  backend.ts  types.ts
website/src/components/: Graph.svelte  Header.svelte
website/src/openapi/: index.ts
website/src/openapi/models/: WithinSimilarResponse.ts
website/src/openapi/services/: DefaultService.ts
